fixtures/ast/errors/method_set_where_constraint/source.able
interface Display {
  fn show(self: Self) -> string
}

struct Wrapper {
  value: i32
}

methods Wrapper where Self: Display {
  fn describe(self: Wrapper) -> string {
    return self.show()
  }
}

wrapper := Wrapper { value: 1 }
wrapper.describe()
